fix fullscreen image view doesn't work on Safari & iPhone
reaon: img.src = ? is asynchronous, so, do work in onload

--- a/themes/blog/sass/comment.scss
+++ b/themes/blog/sass/comment.scss
@@ -237,6 +237,7 @@
                 font-family: inherit;
                 font-size: inherit;
                 flex: 1;
+                background: transparent;
             }
         }
     }
